syntax = "proto3";
package autoplayer;
option go_package = "rpc/autoplayer";


message PlayRequest {
    int32 num_games = 1;
    int32 num_cores = 2;
    int32 comp1_engine = 3;
    int32 comp2_engine = 4;
    string output_file = 5;
    string lexicon_name = 6;
}

message PlayResponse {}

service AutoPlayer {
    rpc Play(PlayRequest) returns (PlayResponse);
}